# pc-parts-api/app/Http/Resources/UserResource.php
@@ -13,7 +13,6 @@ use OpenApi\Attributes as OAT;
         new OAT\Property(property: 'id', type: 'integer', example: 1),
         new OAT\Property(property: 'name', type: 'string', example: 'John Doe'),
         new OAT\Property(property: 'email', type: 'string', example: 'john@example.com'),
-        new OAT\Property(property: 'avatar_url', type: 'string', example: 'https://someplace.com/avatar', nullable: true),
         new OAT\Property(property: 'created_at', type: 'datetime', example: '2022-08-27T16:14:46.000000Z'),
     ]
 )]
@@ -31,7 +30,6 @@ class UserResource extends JsonResource
             'id' => $this->id,
             'name' => $this->name,
             'email' => $this->email,
-            'avatar_url' => $this->avatar_url,
             'created_at' => $this->created_at,
         ];
     }
