# pc-parts-api/public/openapi.yaml
@@ -145,6 +145,29 @@ paths:
       security:
         -
           BearerToken: []
+  /api/orders:
+    post:
+      tags:
+        - orders
+      summary: 'Create order'
+      description: 'Create an Order.'
+      operationId: OrderController.create
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateOrderRequest'
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderResource'
+      security:
+        -
+          BearerToken: []
   /api/profile:
     get:
       tags:
@@ -159,6 +182,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserResource'
+      security:
+        -
+          BearerToken: []
+    delete:
+      tags:
+        - profile
+      summary: 'delete current user'
+      description: 'Delete the authenticated user.'
+      operationId: ProfileController.delete
+      responses:
+        '204':
+          description: 'No content'
       security:
         -
           BearerToken: []
@@ -230,6 +265,46 @@ components:
           type: string
           example: '123456'
       type: object
+    CreateOrderRequest:
+      required:
+        - firstName
+        - lastName
+        - email
+        - phoneNumber
+        - deliveryAddress
+      properties:
+        firstName:
+          type: string
+          example: John
+        lastName:
+          type: string
+          example: Doe
+        email:
+          type: string
+          format: email
+          example: user@example.com
+        phoneNumber:
+          type: string
+          example: 123-456-7890
+        deliveryAddress:
+          properties:
+            address1:
+              type: string
+              example: '123 Easy Street'
+            address2:
+              type: string
+              example: 'Apt. 309'
+            city:
+              type: string
+              example: Youngstown
+            state:
+              type: string
+              example: OH
+            zipCode:
+              type: integer
+              example: 123456
+          type: object
+      type: object
     AccessTokenResource:
       properties:
         access_token:
@@ -273,6 +348,52 @@ components:
         token:
           $ref: '#/components/schemas/AccessTokenResource'
       type: object
+    OrderResource:
+      properties:
+        id:
+          type: integer
+          example: 1
+        firstName:
+          type: string
+          example: John
+        lastName:
+          type: string
+          example: Doe
+        email:
+          type: string
+          example: john@example.com
+        phoneNumber:
+          type: string
+          example: 123-456-7890
+        created_at:
+          type: string
+          format: date-time
+          example: '2022-08-27T16:14:46.000000Z'
+        deliveryAddress:
+          properties:
+            id:
+              type: integer
+              example: 1
+            order_id:
+              type: integer
+              example: 1
+            address1:
+              type: string
+              example: '123 Easy Street'
+            address2:
+              type: string
+              example: 'Apt. 309'
+            city:
+              type: string
+              example: Youngstown
+            state:
+              type: string
+              example: OH
+            zipCode:
+              type: integer
+              example: 123456
+          type: object
+      type: object
     UserResource:
       properties:
         id:
@@ -284,10 +405,6 @@ components:
         email:
           type: string
           example: john@example.com
-        avatar_url:
-          type: string
-          example: 'https://someplace.com/avatar'
-          nullable: true
         created_at:
           type: string
           format: date-time
