# pc-parts-api/routes/api/orders.php
@@ -1,0 +1,8 @@
+<?php
+
+use App\Http\Controllers\OrderController;
+use Illuminate\Support\Facades\Route;
+
+Route::group(['prefix' => 'orders'], function () {
+    Route::post('/', [OrderController::class, 'create']);
+});
